--- a/p/pa/pae/paessler.com.html
+++ b/p/pa/pae/paessler.com.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the paessler.com privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219004422id_/http%3A//www.paessler.com/company/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the paessler.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615122511id_/http%3A//www.paessler.com/company/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US" lang="en"><head>
   <title>Privacy Policy</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
   <base href="http://www.paessler.com/company/privacypolicy/">
   <link rel="stylesheet" type="text/css" href="/common/style.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="/common/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="/common/print2.css" media="print">
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
   <script src="/common/js.js" type="text/javascript"></script>
   <meta name="keywords" content="network monitoring software, network performance management, network monitoring tools, paessler, network management, network monitor, internet monitoring software, network management tools, load testing, website monitoring, server monitoring tools, network performance testing, prtg, IPcheck, Webserver Stress Tool">
-  <meta name="description" content="Specialized in network monitoring and testing scenarios Paessler offers a range of highly efficient tools with a strong focus on usability and performance and with an excellent price-performance ratio. Network monitoring is essential for today's businesses to ensure the availability of servers, routers, switches,  websites and applications.">
+  <meta name="description" content="Specialized in network monitoring and testing scenarios Paessler offers a range of highly efficient tools with a strong focus on usability and performance and with an excellent price-performance ratio. Our Windows based network monitoring software is essential for today's businesses to ensure the availability of servers, routers, switches, websites and applications. Freeware and free Trial available!">
   <meta name="robots" content="follow,noindex"> 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
@@ -18,7 +19,7 @@
   <div id="pnlLeft">
     <div id="pnlSecondMenu">
       <div class="h6"><a href="/company" title="Paessler Company Information">Company</a></div>
-      <ul> <li><a href="http://www.paessler.com/company/contact" title="How You Can Reach Us" class="first has_children">Contact</a></li> <li><a href="http://www.paessler.com/company/partners" title="Getting The Most Out of Paessler Products" class="has_children">Partners</a></li> <li><a href="http://www.paessler.com/company/press" title="Paessler AG - Press Releases" class="has_children">Press</a></li> <li><a href="http://www.paessler.com/company/casestudies" title="How Customers Benefit From Using Paessler Products" class="has_children">Case Studies</a></li> <li><a href="http://www.paessler.com/company/newsletter" title="Subscribe to Our Distribution List and Stay Up To Date!" class="last has_children">Newsletter</a></li> </ul>
+      <ul> <li><a href="http://www.paessler.com/company/contact" title="How You Can Reach Us" class="first has_children">Contact</a></li> <li><a href="http://www.paessler.com/company/partners" title="Getting The Most Out of Paessler Products" class="has_children">Partners</a></li> <li><a href="http://www.paessler.com/company/press" title="Paessler AG - Press Releases" class="has_children">Press</a></li> <li><a href="http://www.paessler.com/company/in_the_press" title="Latest Featured Publications" class="has_children">In The Press</a></li> <li><a href="http://www.paessler.com/company/casestudies" title="How Customers Benefit From Using Paessler Products" class="has_children">Case Studies</a></li> <li><a href="http://www.paessler.com/company/newsletter" title="Subscribe to Our Distribution List and Stay Up To Date!" class="last has_children">Newsletter</a></li> </ul>
     </div>
     <div id="pnlSecondMenuBottom"></div>
     </div>
@@ -36,7 +37,8 @@
             	<div id="pnlPageTitle"><h1>Privacy Policy</h1></div>
       		<h2>Privacy Policy</h2>
 
-		<h2>We are fully committed to protecting your privacy!</h2>
+		<div class="page-element" id="hdrImage">
+		</div><h2>We are fully committed to protecting your privacy!</h2>
 		<p>Aside from non-personalized cookie-based session tracking (as used by most standard website statistics), which does not involve storage of any personal information whatsoever, we do not track usage of individual anonymous visitors to our websites, nor do we store any personal information of anonymous users with regard to IP addresses or cookies.</p>
 		<p>When you purchase software from our company (usually through our Online Store) under German tax legislation, we are required to store your address, purchase data and IP-address. Part of this information is also stored to allow you to log into our website. If you log into our website with this personal login information (i.e. to gain access to product downloads and your personal license keys) we will log some of your activity for security purposes.</p>
 		<p>All registered users are notified about new versions of the products they have purchased on a regular basis. We send our newsletter "PaesslerNews" to all customers that have bought a product, and also to everyone opting into our PaesslerNews newsletter. At any time you may ask to be excluded or removed from these mailings, and an unsubscribe link is always provided at the end of every newsletter.</p>
@@ -44,7 +46,7 @@
 </div>
   <div id="pnlFooter">
         <ul id="left">
-        <li>© 1998-2008 <a href="/company/contact">Paessler AG</a></li><li><a style="padding-left:22px;" href="/solutions">Solutions</a></li>
+        <li>© 1998-2009 <a href="/company/contact">Paessler AG</a></li><li><a style="padding-left:22px;" href="/solutions">Solutions</a></li>
 	</ul>
         <ul id="right">
         <li><a href="/company/contact">Contact</a></li>
@@ -56,19 +58,16 @@
 <ul><li><a href="http://www.paessler.com" title="Availability-, Performance- and Usage-Monitoring">Home</a></li>
 <li><a href="http://www.paessler.com/products" title="Network Monitoring and Testing Software">Products</a>
 	<ul>
-	<li><a href="http://www.paessler.com/prtg" title="PRTG Monitoring Products from Paessler">PRTG Product Overview</a></li>
-	<li><a href="http://www.paessler.com/prtg7" title="Network Monitoring Made Easy">PRTG Network Monitor</a></li>
-	<li><a href="http://www.paessler.com/prtg6" title="Network And Bandwidth Usage Monitoring Made Easy">PRTG Traffic Grapher</a></li>
-	<li><a href="http://www.paessler.com/snmphelper" title="Windows System Parameter Monitoring Made Easy">SNMP Helper</a></li>
+	<li><a href="http://www.paessler.com/prtg" title="Network Monitoring Made Easy">PRTG Network Monitor</a></li>
+	<li><a href="http://www.paessler.com/prtg6" title="Network Usage And Bandwidth Traffic Monitoring Made Easy">PRTG Traffic Grapher</a></li>
 	<li><a href="http://www.paessler.com/webstress" title="Web Server Performance, Load, and Stress-Test">Webserver Stress Tool</a></li>
-	<li><a href="http://www.paessler.com/tools" title="Freeware Tools for Your Network">Free Network Tools</a></li></ul>
+	<li><a href="http://www.paessler.com/tools" title="Free Network Monitoring Tools for Your Network">Free Network Tools</a></li></ul>
 </li>
 
 <li><a href="http://www.paessler.com/download" title="Downloads for Free and Commercial Editions">Downloads</a>
 	<ul>
-	<li><a href="http://www.paessler.com/prtg7/download" title="Bandwidth Monitoring Tool">PRTG Network Monitor</a></li>
+	<li><a href="http://www.paessler.com/prtg/download" title="Free Network Monitor">PRTG Network Monitor</a></li>
 	<li><a href="http://www.paessler.com/prtg6/download" title="Bandwidth Monitoring Tool">PRTG Traffic Grapher</a></li>
-	<li><a href="http://www.paessler.com/snmphelper/download" title="Windows System Parameter Monitoring Tool">SNMP Helper</a></li>
 	<li><a href="http://www.paessler.com/webstress/download" title="Webserver Load Test Tool">Webserver Stress Tool</a></li>
 	<li><a href="http://www.paessler.com/tools" title="Freeware Tools for Your Network">Freeware Network Tools</a></li></ul>
 </li>
@@ -77,13 +76,12 @@
 	<ul>
 	<li><a href="https://www.paessler.com/order/prtg" title="Ordering PRTG Network Monitor V7">PRTG Network Monitor</a></li>
 	<li><a href="https://www.paessler.com/order/prtg6" title="Ordering PRTG Traffic Grapher V6">PRTG Traffic Grapher</a></li>
-	<li><a href="https://www.paessler.com/order/snmphelper" title="Ordering SNMP Helper Pro">SNMP Helper Pro</a></li>
 	<li><a href="https://www.paessler.com/order/webstress" title="Ordering Webserver Stress Tool">Webserver Stress Tool</a></li>
 	<li><a href="https://www.paessler.com/order/addons" title="Order Available Add-Ons">Add Ons</a></li>
 	<li><a href="https://www.paessler.com/order/howto" title="Q+A's Around The Order Process">How To Order (FAQs)</a></li></ul>
 </li>
 
-<li><a href="http://www.paessler.com/support" title="Product Support And Services">support</a>
+<li><a href="http://www.paessler.com/support" title="Self-Service Support Options (for All Customers)">support</a>
 	<ul>
 	<li><a href="http://www.paessler.com/support/kb" title="Articles and How Tos concerning network availability monitoring and network bandwidth monitoring.">Knowledge Base</a></li>
 	<li><a href="http://www.paessler.com/support/openticket" title="Open A New Support Ticket">Support Ticket</a></li>
@@ -97,6 +95,7 @@
 	<li><a href="http://www.paessler.com/company/contact" title="How You Can Reach Us">Contact</a></li>
 	<li><a href="http://www.paessler.com/company/partners" title="Getting The Most Out of Paessler Products">Partners</a></li>
 	<li><a href="http://www.paessler.com/company/press" title="Paessler AG - Press Releases">Press</a></li>
+	<li><a href="http://www.paessler.com/company/in_the_press" title="Latest Featured Publications">In The Press</a></li>
 	<li><a href="http://www.paessler.com/company/casestudies" title="How Customers Benefit From Using Paessler Products">Case Studies</a></li>
 	<li><a href="http://www.paessler.com/company/newsletter" title="Subscribe to Our Distribution List and Stay Up To Date!">Newsletter</a></li></ul>
 </li>
@@ -110,9 +109,7 @@
 	<ul>
 		<li><a href="http://www.paessler.com/company/privacypolicy" title="English." class="bold">EN</a></li>
 		<li><a href="http://www.de.paessler.com/company/privacypolicy" title="Deutsch.">DE</a></li>
-		<li><a href="http://www.es.paessler.com/company/privacypolicy" title="Espagnol.">ES</a></li>
-		<li><a href="http://www.fr.paessler.com/company/privacypolicy" title="Francais.">FR</a></li>
-		<li><a href="http://www.it.paessler.com/company/privacypolicy" title="Italiano.">IT</a></li>
+<li class="inactive" style="color:#6287AF;font-size:10px;">ES</li><li class="inactive" style="color:#6287AF;font-size:10px;">FR</li>		<li><a href="http://www.it.paessler.com/company/privacypolicy" title="Italiano.">IT</a></li>
 	</ul>
     </div>
 
