--- a/s/sp/spl/splitreason.com.html
+++ b/s/sp/spl/splitreason.com.html
@@ -1,16 +1,11 @@
-<!--The following is the downloaded HTML source of the splitreason.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216030928id_/http%3A//www.splitreason.com/index.php%3Fdisplay%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the splitreason.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615162713id_/http%3A//www.splitreason.com/index.php%3Fdisplay%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 	<title>SPLITREASON.COM - Gear for Geeks and Gamers</title>
 	<link rel="stylesheet" type="text/css" href="/sr_styles2.1.css">
 	<link rel="apple-touch-icon" href="/webclip.png">
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script><script type="text/javascript">
-_uacct = "UA-138441-1";
-urchinTracker();
-</script></head>
-
+</head>
 <body>
 <div id="main">
 <!-- open 'header' -->
@@ -205,7 +200,7 @@ We hate spammers just as much as you do... <br>
 		<li class="last"><a href="http://www.splitreason.com/rss.php?type=whatsnew">New Products RSS Feed 2.0</a></li>
 	</ul>
 	<ul>
-		<li><a href="http://www.splitreason.com/">(c) 2003-2008 SplitReason.com - All rights reserved</a></li>
+		<li><a href="http://www.splitreason.com/">(c) 2003-2009 SplitReason.com - All rights reserved</a></li>
 		<li><a href="http://www.splitreason.com/info/tos">Conditions of use</a></li>
 		<li class="last"><a href="http://www.splitreason.com/index.php?display=privacy">Privacy Policy</a></li>
 	</ul>
@@ -219,6 +214,9 @@ We hate spammers just as much as you do... <br>
 							border:0px;
 							top:0px; left:886px;
 						}
-						</style><map name="admap"><area shape="rect" coords="2,54,183,85" href="http://twitter.com/splitreason_com" target="_top" alt=""><area shape="rect" coords="1,87,184,116" href="http://www.new.facebook.com/group.php?gid=4790584019" target="_top" alt=""><area shape="rect" coords="0,118,186,147" href="http://www.flickr.com/photos/splitreason/" target="_top" alt=""><area shape="rect" coords="31,178,183,201" href="http://feeds.feedburner.com/splitreason/QJOe" target="_top" alt=""><area shape="rect" coords="31,224,185,245" href="http://feeds.feedburner.com/TheSplitreasoncomBlog" target="_top" alt=""><area shape="rect" coords="31,203,186,224" href="http://feeds.feedburner.com/Splitreason-Designs" target="_top" alt=""></map><img src="http://www.splitreason.com//img/ad/decembersidebar.jpg" id="sidebar_ad" alt="December sidebar" usemap="#admap">
+						</style><map name="admap"><area shape="rect" coords="18,160,175,187" href="http://feeds.feedburner.com/Splitreason-Designs" target="_top" alt=""><area shape="rect" coords="16,184,167,205" href="http://www.myspace.com/sr_clothing" target="_top" alt=""><area shape="rect" coords="25,238,180,261" href="http://www.splitreason.com" target="_top" alt=""><area shape="rect" coords="13,107,170,134" href="http://www.new.facebook.com/group.php?gid=4790584019" target="_top" alt=""><area shape="rect" coords="15,286,166,307" href="http://feeds.feedburner.com/TheSplitreasoncomBlog" target="_top" alt=""><area shape="rect" coords="14,207,171,234" href="http://www.flickr.com/photos/splitreason" target="_top" alt=""><area shape="rect" coords="14,135,176,159" href="http://twitter.com/splitreason_com" target="_blank" alt=""><area shape="rect" coords="14,225,171,252" href="http://www.facebook.com/group.php?gid=4790584019" target="_top" alt="fb"><area shape="rect" coords="15,302,166,323" href="http://feeds.feedburner.com/splitreason/QJOe" target="_top" alt=""></map><img src="http://www.splitreason.com//img/ad/social.jpg" id="sidebar_ad" alt="Sidebar" usemap="#admap">
+<script type="text/javascript"> var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www."); document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E")); </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script> <script type="text/javascript"> try { var pageTracker = _gat._getTracker("UA-138441-1"); pageTracker._trackPageview(); } catch(err) {}</script>
+
+
 
 </body></html>
