--- a/s/sh/sha/shapefit.com.html
+++ b/s/sh/sha/shapefit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shapefit.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216165521id_/http%3A//www.shapefit.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shapefit.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616053725id_/http%3A//www.shapefit.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/newsite.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -33,101 +33,34 @@ google_color_text = "000000";
 </div>
  </div></td></tr> <tr valign="middle"> 
 <td height="160" valign="top"> <table width="100%" border="0" cellpadding="0" cellspacing="0"> 
-<tbody><tr> <td width="750" height="160" valign="top" background="http://www.shapefit.com/header-newsite-shapefit.gif"> <p align="left"><br> <font color="#FFFF00"> <b>
-<br>
-    &nbsp;&nbsp;&nbsp;<img src="http://www.shapefit.com/search-our-site.jpg" width="160" height="50"></b> 
-    </font></p><form action="http://www.shapefit.com/search.html" id="cse-search-box"><font color="#FFFF00">
-      <div> 
-        <input type="hidden" name="cx" value="partner-pub-6446064772164951:7z842h-4xjj">
-        <input type="hidden" name="cof" value="FORID:10">
-        <input type="hidden" name="ie" value="ISO-8859-1">
-        &nbsp;&nbsp;&nbsp;
-        <input type="text" name="q" size="20">
-        <input type="image" src="http://www.shapefit.com/search-go.gif" name="sa" value="Search" align="top">
-      </div>
+<tbody><tr> 
+  <td width="750" height="160" valign="top" background="http://www.shapefit.com/header-newsite-shapefit.gif"> 
+    <p align="left"><br>
+      &nbsp;&nbsp;&nbsp;<a href="http://fittracker.shapefit.com/"><img src="http://www.shapefit.com/join-free-header-logo.gif" width="173" height="129" border="0"></a><br>
     
-    <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
-    </font></form></td>
+  </p></td>
 </tr>
  </tbody></table></td></tr> <tr valign="middle"> 
 <td height="1076" valign="top"> <table width="100%" border="0" cellpadding="10" cellspacing="0"> 
 <tbody><tr> <td valign="top" height="1076" background="left-bg-newsite.gif" width="170"> 
- 
-<!--
-Do not modify the NAME value of any of the INPUT fields
-the FORM action, or any of the hidden fields (eg. input type=hidden).
-These are all required for this form to function correctly.
--->
-<style>
+<form action="http://www.shapefit.com/search.html" id="cse-search-box">
 
-	.myForm td, input, select, textarea, checkbox  {
-		font-family: tahoma;
-		font-size: 12px;
-	}
-
-	.required {
-		color: red;
-	}
-
-</style>
-<form method="post" action="http://www.shapefit.com/sendstudio/form.php?form=4" id="frmSS4" onsubmit="return CheckForm4(this);">
-	
-  <table border="0" cellpadding="2" class="myForm">
-    <tbody><tr> 
-      <td width="165"> 
-        <div align="center"><img src="http://www.shapefit.com/newsletter-subscribe.gif" width="122" height="57"></div>
-      </td>
-    </tr>
-    <tr> 
-      <td width="165"> 
-        <div align="center"> 
-          <input type="text" name="email" value="E-Mail Address">
-        </div>
-      </td>
-    </tr>
-    <input type="hidden" name="format" value="h">
-    <tr> 
-      <td width="165"> 
-        <div align="center"> 
-          <input type="submit" value="Subscribe">
-        </div>
-      </td>
-    </tr>
-  </tbody></table>
-</form>
-
-<script language="javascript">
-
-			function CheckMultiple4(frm, name) {
-				for (var i=0; i < frm.length; i++)
-				{
-					fldObj = frm.elements[i];
-					fldId = fldObj.id;
-					if (fldId) {
-						var fieldnamecheck=fldObj.id.indexOf(name);
-						if (fieldnamecheck != -1) {
-							if (fldObj.checked) {
-								return true;
-							}
-						}
-					}
-				}
-				return false;
-			}
-		function CheckForm4(f) {
-			if (f.email.value == "") {
-				alert("Please enter your email address.");
-				f.email.focus();
-				return false;
-			}
-		
-				return true;
-			};
-		
-</script>
+  <div>
+    <div align="center">
+      <input type="hidden" name="cx" value="partner-pub-6446064772164951:7z842h-4xjj">
+      <input type="hidden" name="cof" value="FORID:11">
+      <input type="hidden" name="ie" value="ISO-8859-1">
+      <input type="text" name="q" size="20">
+      <br>
+      <input type="submit" name="sa" value="Search Now!">
+    </div>
+  </div>
+    </form>
+    <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
 <p><a href="http://www.shapefit.com"><img src="http://www.shapefit.com/new-nav-icons-home.gif" width="170" height="20" border="0"><br>
   </a><a href="http://fittracker.shapefit.com"><img src="http://www.shapefit.com/new-nav-icons-fittracker.gif" width="170" height="20" border="0"><br>
-  </a><a href="http://www.shapefit.com/shapefit-fitness-products.html"><img src="http://www.shapefit.com/new-nav-icons-products.gif" width="170" height="20" border="0"><br>
+  </a><a href="http://www.shapefit.com/calculators.html"><img src="http://www.shapefit.com/new-nav-icons-calculators.gif" width="170" height="20" border="0"><br>
+  </a><a href="http://www.shapefit.com/shapefit-assist.html"><img src="http://www.shapefit.com/new-nav-icons-assist.gif" width="170" height="20" border="0"><br>
   </a><a href="http://www.shapefit.com/exercise.html"><img src="http://www.shapefit.com/new-nav-icons-exercise.gif" width="170" height="20" border="0"><br>
   </a><a href="http://www.shapefit.com/nutrition.html"><img src="http://www.shapefit.com/new-nav-icons-nutrition.gif" width="170" height="20" border="0"><br>
   </a><a href="http://www.shapefit.com/cardio.html"><img src="http://www.shapefit.com/new-nav-icons-cardio.gif" width="170" height="20" border="0"></a><a href="http://fittracker.shapefit.com"><br>
@@ -136,6 +69,7 @@ These are all required for this form to function correctly.
   <a href="http://www.shapefit.com/latest-articles.html"><img src="http://www.shapefit.com/new-nav-icons-latest-articles.gif" width="170" height="20" border="0"></a><br>
   <a href="http://www.shapefit.com/fitness-questions-answers.html"><img src="http://www.shapefit.com/new-nav-icons-questions.gif" width="170" height="20" border="0"><br>
   </a><a href="http://www.shapefit.com/best-snacks.html"><img src="http://www.shapefit.com/new-nav-icons-snacks.gif" width="170" height="20" border="0"></a><br>
+  <a href="http://www.shapefit.com/fastfood.html"><img src="http://www.shapefit.com/new-nav-icons-fast-food.gif" width="170" height="20" border="0"></a><br>
   <a href="http://www.shapefit.com/exercise-videos.html"><img src="http://www.shapefit.com/new-nav-icons-videos.gif" width="170" height="20" border="0"></a><br>
   <a href="http://www.shapefit.com/fitness-games.html"><img src="http://www.shapefit.com/new-nav-icons-games.gif" width="170" height="20" border="0"></a><br>
   <a href="http://www.shapefit.com/weight-loss-recipes.html"><img src="http://www.shapefit.com/new-nav-icons-recipes.gif" width="170" height="20" border="0"></a><br>
@@ -145,8 +79,8 @@ These are all required for this form to function correctly.
   <a href="http://www.shapefit.com/newsletter.html"><img src="http://www.shapefit.com/new-nav-icons-newsletter.gif" width="170" height="20" border="0"><br>
   </a><a href="http://www.shapefit.com/fitness-extras.html"><img src="http://www.shapefit.com/new-nav-icons-extras.gif" width="170" height="20" border="0"><br>
   </a><a href="http://www.shapefit.com/tellafriend.html"><img src="http://www.shapefit.com/new-nav-icons-refer.gif" width="170" height="20" border="0"><br>
-  </a><a href="http://www.shapefit.com/testimonials.html"><img src="http://www.shapefit.com/new-nav-icons-testimonials.gif" width="170" height="20" border="0"><br>
-  </a><a href="http://www.shapefit.com/support-our-site.html"><img src="http://www.shapefit.com/new-nav-icons-donations.gif" width="170" height="20" border="0"><br>
+  </a><a href="http://www.shapefit.com/testimonials.html"><img src="http://www.shapefit.com/new-nav-icons-testimonials.gif" width="170" height="20" border="0"></a><a href="http://www.shapefit.com/support-our-site.html"><br>
+  </a><a href="http://www.shapefit.com/advertise.html"><img src="http://www.shapefit.com/new-nav-icons-advertise.gif" width="170" height="20" border="0"><br>
   </a> 
   <!-- AddThis Bookmark Button BEGIN -->
   <a href="http://www.addthis.com/bookmark.php" onclick="addthis_url   = location.href; addthis_title = document.title; return addthis_click(this);" target="_blank"><img src="http://www.shapefit.com/new-nav-icons-bookmark.gif" width="170" height="20" border="0" alt="AddThis Social Bookmark Button"></a> 
@@ -154,8 +88,8 @@ These are all required for this form to function correctly.
   <script type="text/javascript" src="http://s5.addthis.com/js/widget.php?v=10"></script>
   <!-- AddThis Bookmark Button END -->
 </p>
-<p>
-<script type="text/javascript"><!--
+<p> 
+  <script type="text/javascript"><!--
 google_ad_client = "pub-6446064772164951";
 google_alternate_ad_url = "http://shapefit.com/adsense-alt-ad-wide-skyscraper.html";
 google_ad_width = 160;
@@ -171,10 +105,69 @@ google_color_text = "000000";
 //--></script>
   <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-</p><p align="center"><a href="http://www.shapefit.com/shapefit-assist.html"><img src="http://www.shapefit.com/assist-shake.gif" width="120" height="239" border="1"></a></p>
-<p align="center"><a href="http://www.shapefit.com/exercise-bands.html"><img src="http://www.shapefit.com/exercise-bands-navigation.jpg" width="120" height="239" border="1"></a></p>
-<p align="center"><a href="http://fittracker.shapefit.com/users/foxeg15/"><img src="http://www.shapefit.com/fittracker-theresa.jpg" width="120" height="239" border="1"></a>
- </p></td><td width="540" valign="top" background="right-bg-newsite.gif"><!-- #BeginEditable "bodycontent" --> 
+</p><p> 
+</p><div align="center"> 
+  <table width="160" border="0" cellpadding="0" cellspacing="1" bgcolor="#FFFFFF">
+    <tbody><tr> 
+      <td width="149" height="23" valign="middle" bgcolor="FFFFFF"> 
+        <div align="center"><font color="#FFFF00"><img src="http://www.shapefit.com/images/free-newsletter-header.gif" width="120" height="18"></font></div>
+      </td>
+    </tr>
+  </tbody></table>
+  <table width="160" border="0" cellpadding="8" cellspacing="1" bgcolor="#0252A2">
+    <tbody><tr> 
+      <td width="160" height="300" valign="top" class="kris-small" bgcolor="#FFFFFF"> 
+        <p><img src="http://www.shapefit.com/images/newsletter-icon-nav.gif" width="45" height="49" align="right">Our 
+          <b>FREE</b> weekly fitness newsletter is packed with the latest diet 
+          &amp; exercise articles, weight loss success stories and healthy recipes 
+          to help you lose fat and build muscle. <b>Join now!</b></p>
+        <p><b>*Latest Workouts!</b></p>
+        <p><b>*Weight Loss Tips!</b></p>
+        <p><b>*Weekly Recipes!</b></p>
+        <form method="post" action="http://www.shapefit.com/sendstudio/form.php?form=6" id="frmSS6" onsubmit="return CheckForm6(this);">
+          <div align="center"><b><font color="#FF0000">Email Address:</font></b> 
+            <input type="text" name="email" size="15" value="">
+            <input type="hidden" name="format" value="h">
+            <br>
+            <br>
+            <input type="submit" value="Subscribe" name="submit">
+          </div>
+        </form>
+      </td>
+    </tr>
+  </tbody></table>
+  <p> 
+    <script language="javascript">
+
+			function CheckMultiple6(frm, name) {
+				for (var i=0; i < frm.length; i++)
+				{
+					fldObj = frm.elements[i];
+					fldId = fldObj.id;
+					if (fldId) {
+						var fieldnamecheck=fldObj.id.indexOf(name);
+						if (fieldnamecheck != -1) {
+							if (fldObj.checked) {
+								return true;
+							}
+						}
+					}
+				}
+				return false;
+			}
+		function CheckForm6(f) {
+			if (f.email.value == "") {
+				alert("Please enter your email address.");
+				f.email.focus();
+				return false;
+			}
+		
+				return true;
+			};
+		
+</script>
+</p></div>
+ </td><td width="540" valign="top" background="right-bg-newsite.gif"><!-- #BeginEditable "bodycontent" --> 
 <p align="center">&nbsp;</p><p><span class="H1">ShapeFit Privacy Policy - Protecting 
 The Privacy Our Visitors</span></p><p align="center"> 
 </p><div align="center">
@@ -321,7 +314,7 @@ google_color_text = "000000";
 google_color_url = "008000";
 //--></script> <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>  
-</p><p align="center">&nbsp; </p><p align="center">&nbsp;</p><p align="center"><a href="http://fittracker.shapefit.com"><img src="http://www.shapefit.com/fittracker-dropdown.jpg" width="385" height="292" border="1"></a></p><p align="center">&nbsp;</p><p align="center">&nbsp;</p><!-- #EndEditable --></td></tr> 
+</p><p align="center">&nbsp; </p><p align="center">&nbsp;</p><p align="center"></p><p align="center">&nbsp;</p><p align="center">&nbsp;</p><!-- #EndEditable --></td></tr> 
 </tbody></table></td></tr> <tr valign="middle"> <td valign="top" height="83"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="750" height="83" valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="188" height="81" valign="top"><table width="100%" border="0" cellpadding="7" cellspacing="0"><tbody><tr><td width="174" height="81" valign="top" background="http://www.shapefit.com/bottom-square-1.gif"><br><img src="http://www.shapefit.com/arrow-white.gif" width="13" height="15" align="absmiddle"> 
 <b><a href="http://www.shapefit.com/newsletter.html"><font color="#FFFF00">FREE 
 Newsletter</font></a><font color="#FFFFFF"><br> </font></b><font color="#FFFFFF">Our 
@@ -334,25 +327,40 @@ weight loss success stories from our visitors!</font></td></tr></tbody></table><
 build muscle? </font></td></tr></tbody></table></td><td width="188" valign="top"><table width="100%" border="0" cellpadding="7" cellspacing="0"><tbody><tr><td width="174" height="81" valign="top" background="http://www.shapefit.com/bottom-square-4.gif"><br><img src="http://www.shapefit.com/arrow-white.gif" width="13" height="15" align="absmiddle"> 
 <b><a href="http://www.shapefit.com/tellafriend.html"><font color="#FFFF00">Refer 
 A Friend</font></a><font color="#FFFFFF"><br> </font></b><font color="#FFFFFF">Encourage 
-your friends to get into shape &amp; stay fit!</font></td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table></td></tr><tr valign="middle"><td height="30" valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="750" height="30" valign="middle"><div align="CENTER"><span class="kris-small"><a href="http://www.shapefit.com">Home</a> 
-| <a href="http://www.shapefit.com/exercise.html">Build Muscle</a> |<b> </b><a href="http://www.shapefit.com/cardio.html">Burn 
-Fat</a> | <a href="http://www.shapefit.com/nutrition.html">Nutrition</a> |<b> 
-</b> <a href="http://www.shapefit.com/success-stories.html">Success Stories</a> 
-<b> </b>| <a href="http://www.shapefit.com/newsletter.html">Newsletter</a> | <a href="http://www.shapefit.com/forum/" target="_blank">Forums</a> 
-| <a href="http://fittracker.shapefit.com">FitTracker</a> | <a href="http://www.shapefit.com/sitemap.html">Site 
-Map</a> | <a href="http://www.shapefit.com/media.html">Media</a> | <a href="http://www.shapefit.com/about.html">About</a> 
-| <a href="http://www.shapefit.com/contact.html">Contact</a></span></div></td></tr></tbody></table></td></tr><tr valign="middle"><td height="30" valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="750" height="30" valign="middle">
-<div align="CENTER">© Copyright 2008 ShapeFit, LLC. All Rights Reserved | 
+your friends to get into shape &amp; stay fit!</font></td></tr></tbody></table></td></tr></tbody></table></td></tr></tbody></table></td></tr><tr valign="middle"><td height="30" valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="750" height="30" valign="middle">
+<div align="CENTER"><span class="kris-small"><a href="http://www.shapefit.com">Home</a> 
+  | <a href="http://www.shapefit.com/exercise.html">Build Muscle</a> |<b> </b><a href="http://www.shapefit.com/cardio.html">Burn 
+  Fat</a> | <a href="http://www.shapefit.com/nutrition.html">Nutrition</a> |<b> 
+  </b> <a href="http://www.shapefit.com/success-stories.html">Success Stories</a> 
+  <b> </b>| <a href="http://www.shapefit.com/newsletter.html">Newsletter</a> | 
+  <a href="http://www.shapefit.com/forum/" target="_blank">Forums</a> | <a href="http://fittracker.shapefit.com">FitTracker</a> 
+  | <a href="http://www.shapefit.com/sitemap.html">Site Map</a> | <a href="http://www.shapefit.com/advertise.html">Advertise</a> 
+  | <a href="http://www.shapefit.com/about.html">About</a> | <a href="http://www.shapefit.com/contact.html">Contact</a></span></div>
+</td></tr></tbody></table></td></tr><tr valign="middle"><td height="30" valign="top"><table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="750" height="30" valign="middle">
+<div align="CENTER">© Copyright 2009 ShapeFit, LLC. All Rights Reserved | 
   <a href="http://www.shapefit.com/terms-conditions.html">Terms and Conditions</a> 
   | <a href="http://www.shapefit.com/privacy-policy.html">Privacy Policy</a></div>
 </td></tr></tbody></table></td></tr> 
 </tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script> <script type="text/javascript">
-_uacct = "UA-239235-1";
-_userv=2;
-urchinTracker();
-</script> 
+<!-- Kontera ContentLink(TM);-->
+<script type="text/javascript">
+var dc_AdLinkColor = 'blue' ;
+var dc_PublisherID = 99559 ;
+var dc_ChannelID = '534';
+</script>
+<script type="text/javascript" src="http://kona.kontera.com/javascript/lib/KonaLibInline.js">
+</script>
+<!-- Kontera ContentLink(TM) -->
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-239235-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 <!-- #EndTemplate -->
 </body></html>
